--- a/w/index.html
+++ b/w/index.html
@@ -43,6 +43,10 @@
 							<td class="exer"></td>
 							<td class="reps"></td>
 						</tr>
+						<tr>
+							<td class="exer"></td>
+							<td class="reps"></td>
+						</tr>
 					</tbody>
 				</table>
 				
@@ -68,7 +72,7 @@
 			var exers = ['Burpees', 'Incline Push-Ups', 'Squats', 'Sit-Ups', 'Lunges', 'Tuck Jumps', 'Dips', 'Triceps', 'Cross Sit-Ups', 'Jackknife', 'Butterfly Dumbell', 'Obliques'];
 			var exerel = $('.exer');
 			
-			var reps = [5,6,7,8,9,10];
+			var reps = [5,6,7,8,9,10,11,12,13,14,15];
 			var repsel = $('.reps');
 			
 			var meter = $('.meter');
