--- a/index.html
+++ b/index.html
@@ -55,14 +55,13 @@
 						<p><i class="fa fa-circle green"></i>HTML 5</p>
 						<p><i class="fa fa-circle green"></i>CSS/Sass</p>
 						<p><i class="fa fa-circle green"></i>Javascript</p>
-						<p><i class="fa fa-circle yellow"></i>PHP</p>
+						<p><i class="fa fa-circle green"></i>PHP</p>
 						<hr>
 						<h1>Frameworks I Use</h1>
 						<p><i class="fa fa-circle green"></i>Zurb Foundation</p>
 						<p><i class="fa fa-circle green"></i>Bootstrap</p>
 						<p><i class="fa fa-circle green"></i>jQuery</p>
-						<p><i class="fa fa-circle yellow"></i>Wordpress</p>
-						<p><i class="fa fa-circle yellow"></i>Anchor CMS</p>
+						<p><i class="fa fa-circle green"></i>Wordpress</p>
 						<p><i class="fa fa-circle green"></i>Laravel</p>
 						<hr>
 						<h1>I'm also familiar with...</h1>
