--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		
 		<main>    
 			<aside>
-	    	<div class="row">
+	    	<div class="row animated bounceInRight">
 	    		<div class="small-12 columns">
 	    			<img src="img/me.jpg" alt="Me" />
 	    			<h4>My name is <strong>Zack Warren</strong>. I'm a <strong>web application developer</strong> from Layton, Ut</h4>
@@ -34,7 +34,7 @@
 	    </aside>
 	    
 	    <article>
-	    	<div class="row main-body">
+	    	<div class="row main-body animated bounceInLeft">
 	    		<div class="small-12 columns">
 		    		
 	    			<h3>I build websites and data driven web applications.</h3>
