--- a/index.html
+++ b/index.html
@@ -87,32 +87,32 @@
 	    			
 	    			<ul class="large-block-grid-2 medium-block-grid-2 small-block-grid-1 my-projects">
 	    				<li>
-	    					<img src="img/mathco.png" alt="Placholder Image">
+	    					<img src="img/mathco.jpg" alt="Placholder Image">
 	    					<h5><strong>TheMathCo (AcerPlacer)</strong></h5>
 	    					<p>WordPress site that also required a small scale API for some front end interaction, built with Laravel</p>
 	    				</li>
 	    				<li>
-	    					<img src="img/advancedcfo.png" alt="Placholder Image">
+	    					<img src="img/advancedcfo.jpg" alt="Placholder Image">
 								<h5><strong>AdvancedCFO</strong></h5>
 								<p>WordPress site that was built using the Bedrock Application Framework, Foundation, Gulp & Sass</p>
 	    				</li>
 	    				<li>
-	    					<img src="img/steton.png" alt="Placholder Image">
+	    					<img src="img/steton.jpg" alt="Placholder Image">
 	    					<h5><strong>Steton</strong></h5>
 	    					<p>WordPress site that utilizes the Custom Post Type feature. Built with Foundation, Gulp & Sass.</p>
 	    				</li>
 	    				<li>
-	    					<img src="img/honeyville.png" alt="Placholder Image">
+	    					<img src="img/honeyville.jpg" alt="Placholder Image">
 	    					<a href="http://www.honeyville.com" target="_blank"><h5><strong>Honeyville <i class="fa fa-link"></i></strong></h5></a>
 								<p>WordPress site that utilizes the Custom Post Type feature. Built with Foundation, Gulp & Sass.</p>
 							</li>
 	    				<li>
-	    					<img src="img/allmoxy.png" alt="Placholder Image">
+	    					<img src="img/allmoxy.jpg" alt="Placholder Image">
 	    					<a href="http://www.allmoxy.com" target="_blank"><h5><strong>Allmoxy <i class="fa fa-link"></i></strong></h5></a>
 	    					<p>Advanced Landing page with an awesome user account and custom support section, completely built in Laravel with Ajax.</p>
 	    				</li>
 	    				<li>
-	    					<img src="img/camplins.png" alt="Placholder Image">
+	    					<img src="img/camplins.jpg" alt="Placholder Image">
 	    					<a href="http://www.camplins.ca" target="_blank"><h5><strong>Camplins Custom Components <i class="fa fa-link"></i></strong></h5></a>
 								<p>Landing page built with Foundation & Sass.</p>
 	    				</li>
