--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		    				<li><a href="mailto:zachary.warren@me.com"><i class="fa fa-envelope"></i></a></li>
 		    			</ul>
 		    			
-		    			<p>&copy; Zack Warren <span class="current-year"></span>, All Rights Reserved</p>
+		    			<p class="show-for-large-up">&copy; Zack Warren <span class="current-year"></span>, All Rights Reserved</p>
 	    			</footer>
 	    		</div>
 	    	</div>
@@ -165,6 +165,7 @@
 		    					<li class="phone"><p>801.822.9306</p></li>
 		    					<li class="email"><p>zachary.warren@me.com</p></li>
 	    					</ul>
+	    					<p class="show-for-medium-down text-center">&copy; Zack Warren <span class="current-year"></span>, All Rights Reserved</p>
 	    				</div>
 	    			</div>
 	    		</div>
