--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 	    				</li>
 	    				<li>
 	    					<img src="img/steton.jpg" alt="Placholder Image">
-	    					<h5><strong>Steton</strong></h5>
+	    					<a href="http://www.steton.com" target="_blank"><h5><strong>Steton <i class="fa fa-link"></i></strong></h5></a>
 	    					<p>WordPress site that utilizes the Custom Post Type feature. Built with Foundation, Gulp & Sass.</p>
 	    				</li>
 	    				<li>
