Update portfolio entries

--- a/index.html
+++ b/index.html
@@ -123,6 +123,16 @@
 	    					<a href="http://www.camplins.ca" target="_blank"><h5><strong>Camplins Custom Components <i class="fa fa-link"></i></strong></h5></a>
 								<p>Landing page built with Foundation & Sass.</p>
 	    				</li>
+	    				<li>
+	    					<img src="img/revgen.jpg" alt="Placholder Image">
+	    					<h5><strong>Mercato RevGen</strong></h5>
+								<p>RevGen awards nomination microsite. Built with the Liquid WordPress starter theme.</p>
+	    				</li>
+	    				<li>
+	    					<img src="img/getfluid.jpg" alt="Placholder Image">
+	    					<a href="http://www.getfluid.com" target="_blank"><h5><strong>Fluid Advertising <i class="fa fa-link"></i></strong></h5></a>
+								<p>Fluid Advertising is a fully equipped Design/Digital/Development Agency. Built with WordPress.</p>
+	    				</li>
 	    			</ul>
 	    			
 	    			<hr>
