--- a/index.html
+++ b/index.html
@@ -94,42 +94,42 @@
 	    			
 	    			<ul class="large-block-grid-2 medium-block-grid-2 small-block-grid-1 my-projects">
 	    				<li>
-	    					<img src="img/mathco.jpg" alt="Placholder Image">
+	    					<img src="img/mathco.jpg" alt="The Mathco">
 	    					<h5><strong>TheMathCo (AcerPlacer)</strong></h5>
 	    					<p>WordPress site that also required a small scale API for some front end interaction, built with Laravel</p>
 	    				</li>
 	    				<li>
-	    					<img src="img/advancedcfo.jpg" alt="Placholder Image">
+	    					<img src="img/advancedcfo.jpg" alt="AdvancedCFO">
 								<a href="http://www.advancedcfo.com"><h5><strong>AdvancedCFO <i class="fa fa-link"></i></strong></h5></a>
 								<p>WordPress site that was built using the Bedrock Application Framework, Foundation, Gulp & Sass</p>
 	    				</li>
 	    				<li>
-	    					<img src="img/steton.jpg" alt="Placholder Image">
+	    					<img src="img/steton.jpg" alt="Steton">
 	    					<a href="http://www.steton.com" target="_blank"><h5><strong>Steton <i class="fa fa-link"></i></strong></h5></a>
 	    					<p>WordPress site that utilizes the Custom Post Type feature. Built with Foundation, Gulp & Sass.</p>
 	    				</li>
 	    				<li>
-	    					<img src="img/honeyville.jpg" alt="Placholder Image">
+	    					<img src="img/honeyville.jpg" alt="Honeyville">
 	    					<a href="http://www.honeyville.com" target="_blank"><h5><strong>Honeyville <i class="fa fa-link"></i></strong></h5></a>
 								<p>WordPress site that utilizes the Custom Post Type feature. Built with Foundation, Gulp & Sass.</p>
 							</li>
 	    				<li>
-	    					<img src="img/allmoxy.jpg" alt="Placholder Image">
-	    					<h5><strong>Allmoxy</strong></h5>
-	    					<p>Advanced Landing page with an awesome user account and custom support section, completely built in Laravel with Ajax.</p>
+	    					<img src="img/redsky.png" alt="Redsky">
+	    					<h5><strong>RedSky</strong></h5>
+	    					<p>Cutting edge design, using Bedrock with WordPress and Blade tempalating.</p>
 	    				</li>
 	    				<li>
-	    					<img src="img/camplins.jpg" alt="Placholder Image">
+	    					<img src="img/camplins.jpg" alt="Camplin's Custom Components">
 	    					<a href="http://www.camplins.ca" target="_blank"><h5><strong>Camplins Custom Components <i class="fa fa-link"></i></strong></h5></a>
 								<p>Landing page built with Foundation & Sass.</p>
 	    				</li>
 	    				<li>
-	    					<img src="img/revgen.jpg" alt="Placholder Image">
+	    					<img src="img/revgen.jpg" alt="RevGen (Mercato)">
 	    					<h5><strong>Mercato RevGen</strong></h5>
 								<p>RevGen awards nomination microsite. Built with the Liquid WordPress starter theme.</p>
 	    				</li>
 	    				<li>
-	    					<img src="img/getfluid.jpg" alt="Placholder Image">
+	    					<img src="img/getfluid.jpg" alt="Get Fluid">
 	    					<a href="http://www.getfluid.com" target="_blank"><h5><strong>Fluid Advertising <i class="fa fa-link"></i></strong></h5></a>
 								<p>Fluid Advertising is a fully equipped Design/Digital/Development Agency. Built with WordPress.</p>
 	    				</li>
