--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 	    				<li>
 	    					<img src="img/redsky.png" alt="Redsky">
 	    					<h5><strong>RedSky</strong></h5>
-	    					<p>Cutting edge design, using Bedrock with WordPress and Blade tempalating.</p>
+	    					<p>Cutting edge design, using Bedrock with WordPress and Blade templating.</p>
 	    				</li>
 	    				<li>
 	    					<img src="img/camplins.jpg" alt="Camplin's Custom Components">
