UPdate policy page

--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
 		    <top-bar-section>
 		    	<!-- Left Nav Section -->
 		      <ul class="left hide-for-small">
-		      	<li class="user-info">
+		      	<li class="user-info" ng-if="auth.user">
 							<a href="">
 								<img src="https://secure.gravatar.com/avatar/f9d5184e826d247e89708a0a4a014d49?s=64" alt="Place Holder">
 								<span>Hi, John Doe</span>
