Update loss submission form

--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Signika:300,700' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css">
 		<title>InsureSpan | Welcome</title>
 		<link rel="stylesheet" href="./css/app.css" />
 		<!-- Design Inspiration: https://dribbble.com/shots/2648878-Project-Square-Free-Dashboard-PSD/attachments/531392 -->
