--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	    			<h3>Specifically, websites and data driven web applications.</h3>
 	    			<p>I've been developing sites and apps for <strong>over 5 years</strong>. I'm a <strong>full stack</strong> kinda guy, doing everything from <strong>front-end styling</strong> and javascript to back-end <strong>logic and integration</strong>. I'm <strong>incredibly passionate</strong> about all things 'web development'! Keep on reading to see more about <strong>my skills</strong> and latest projects!</p>
 	    			
-	    			<a data-reveal-id="contactModal" data-reveal class="small hollow button" data-scroll>CONTACT ME</a>
+	    			<a data-reveal-id="contactModal" data-reveal class="small hollow button">CONTACT ME</a>
 	    			
 	    			<div id="contactModal" class="reveal-modal" data-reveal>
 	    				<form id="form2" name="form2" accept-charset="UTF-8" enctype="multipart/form-data" method="post" action="https://zacksmash.wufoo.com/forms/mpsqtpi06nv9t2/#public" data-abide>
