--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 	    			
 	    			<ul class="large-block-grid-2 medium-block-grid-2 small-block-grid-1 my-projects">
 	    				<li>
-	    					<img src="img/campfluid.jpg" alt="Camp Fluid" class="image-lb" data-reveal-id="imageLightbox">
+	    					<img src="img/campfluid.png" alt="Camp Fluid" class="image-lb" data-reveal-id="imageLightbox">
 	    					<h5><strong>Camp Fluid</strong></h5>
 								<div>
 									<span class="radius label">Developed</span>
@@ -134,7 +134,7 @@
 								<p>Camp Fluid is an internal application that Fluid uses to manage clients and projects. I've integrated the Harvest, Trello and Slack API's to send notifications and create resources in each of those services. Built using the Laravel PHP framework and Foundation Front End framework.</p>
 	    				</li>
 	    				<li>
-	    					<img src="img/insurespan.jpg" alt="Camp Fluid" class="image-lb" data-reveal-id="imageLightbox">
+	    					<img src="img/insurespan.png" alt="Camp Fluid" class="image-lb" data-reveal-id="imageLightbox">
 	    					<h5><strong>InsureSpan</strong></h5>
 								<div>
 									<span class="radius label">Developed</span>
@@ -143,7 +143,7 @@
 								<p>InsureSpan is a customer portal for users to login and manage their insurance policies. Built using Angular and Foundation, this app also consumes an API delivered from a .NET backend.</p>
 	    				</li>
 	    				<li>
-	    					<img src="img/mathco.jpg" alt="The Mathco" class="image-lb" data-reveal-id="imageLightbox">
+	    					<img src="img/mathco.png" alt="The Mathco" class="image-lb" data-reveal-id="imageLightbox">
 	    					<h5><strong>TheMathCo (AcerPlacer)</strong></h5>
 	    					<div>
 									<span class="radius label">Developed</span>
@@ -151,7 +151,7 @@
 	    					<p>A hybrid WordPress/Laravel site that required a small scale API for a front end questionnaire that would post answers back to the database immediately, so as not to lose any information obtained by a user.</p>
 	    				</li>
 	    				<li>
-	    					<img src="img/allmoxy.jpg" alt="Allmoxy" class="image-lb" data-reveal-id="imageLightbox">
+	    					<img src="img/allmoxy.png" alt="Allmoxy" class="image-lb" data-reveal-id="imageLightbox">
 	    					<h5><strong>Allmoxy</strong></h5>
 	    					<div>
 									<span class="radius label">Developed</span>
@@ -168,7 +168,7 @@
 	    			
 	    			<ul class="large-block-grid-2 medium-block-grid-2 small-block-grid-1 my-projects">
 	    				<li>
-	    					<img src="img/advancedcfo.jpg" alt="AdvancedCFO" class="image-lb" data-reveal-id="imageLightbox">
+	    					<img src="img/advancedcfo.png" alt="AdvancedCFO" class="image-lb" data-reveal-id="imageLightbox">
 								<a href="http://www.advancedcfo.com"><h5><strong>AdvancedCFO <i class="fa fa-link"></i></strong></h5></a>
 								<div>
 									<span class="radius label">Developed</span>
@@ -176,7 +176,7 @@
 								<p>WordPress site that was built using the Bedrock Application Framework, Foundation, Gulp & Sass</p>
 	    				</li>
 	    				<li>
-	    					<img src="img/honeyville.jpg" alt="Honeyville" class="image-lb" data-reveal-id="imageLightbox">
+	    					<img src="img/honeyville.png" alt="Honeyville" class="image-lb" data-reveal-id="imageLightbox">
 	    					<a href="http://www.honeyville.com" target="_blank"><h5><strong>Honeyville <i class="fa fa-link"></i></strong></h5></a>
 	    					<div>
 									<span class="radius label">Developed</span>
@@ -192,7 +192,7 @@
 	    					<p>Cutting edge design, using Bedrock with WordPress and Blade templating.</p>
 	    				</li>
 	    				<li>
-	    					<img src="img/revgen.jpg" alt="RevGen (Mercato)" class="image-lb" data-reveal-id="imageLightbox">
+	    					<img src="img/revgen.png" alt="RevGen (Mercato)" class="image-lb" data-reveal-id="imageLightbox">
 	    					<h5><strong>Mercato RevGen</strong></h5>
 	    					<div>
 									<span class="radius label">Developed</span>
@@ -200,7 +200,7 @@
 								<p>RevGen awards nomination microsite. Built with the Liquid WordPress starter theme.</p>
 	    				</li>
 	    				<li>
-	    					<img src="img/getfluid.jpg" alt="Get Fluid" class="image-lb" data-reveal-id="imageLightbox">
+	    					<img src="img/getfluid.png" alt="Get Fluid" class="image-lb" data-reveal-id="imageLightbox">
 	    					<a href="http://www.getfluid.com" target="_blank"><h5><strong>Fluid Advertising <i class="fa fa-link"></i></strong></h5></a>
 	    					<div>
 									<span class="radius label">Developed</span>
@@ -208,7 +208,7 @@
 								<p>Fluid Advertising is a fully equipped Design/Digital/Development Agency. Built with WordPress.</p>
 	    				</li>
 	    				<li>
-	    					<img src="img/mercato.jpg" alt="Mercato Partners" class="image-lb" data-reveal-id="imageLightbox">
+	    					<img src="img/mercato.png" alt="Mercato Partners" class="image-lb" data-reveal-id="imageLightbox">
 	    					<a href="http://www.mercatopartners.com" target="_blank"><h5><strong>Mercato Partners <i class="fa fa-link"></i></strong></h5></a>
 	    					<div>
 									<span class="radius label">Developed</span>
