--- a/index.html
+++ b/index.html
@@ -168,24 +168,8 @@
 	    			
 	    			<ul class="large-block-grid-2 medium-block-grid-2 small-block-grid-1 my-projects">
 	    				<li>
-	    					<img src="img/advancedcfo.png" alt="AdvancedCFO" class="image-lb" data-reveal-id="imageLightbox">
-								<a href="http://www.advancedcfo.com"><h5><strong>AdvancedCFO <i class="fa fa-link"></i></strong></h5></a>
-								<div>
-									<span class="radius label">Developed</span>
-								</div>
-								<p>WordPress site that was built using the Bedrock Application Framework, Foundation, Gulp & Sass</p>
-	    				</li>
-	    				<li>
-	    					<img src="img/honeyville.png" alt="Honeyville" class="image-lb" data-reveal-id="imageLightbox">
-	    					<a href="http://www.honeyville.com" target="_blank"><h5><strong>Honeyville <i class="fa fa-link"></i></strong></h5></a>
-	    					<div>
-									<span class="radius label">Developed</span>
-								</div>
-								<p>WordPress site that utilizes the Custom Post Type feature. Built with Foundation, Gulp & Sass.</p>
-							</li>
-	    				<li>
 	    					<img src="img/redsky.png" alt="Redsky" class="image-lb" data-reveal-id="imageLightbox">
-	    					<h5><strong>RedSky</strong></h5>
+	    					<a href="http://www.goredsky.com"><h5><strong>Red Sky <i class="fa fa-link"></i></strong></h5></a>
 	    					<div>
 									<span class="radius label">Developed</span>
 								</div>
@@ -193,7 +177,7 @@
 	    				</li>
 	    				<li>
 	    					<img src="img/revgen.png" alt="RevGen (Mercato)" class="image-lb" data-reveal-id="imageLightbox">
-	    					<h5><strong>Mercato RevGen</strong></h5>
+	    					<a href="http://revgen.mercatopartners.com"><h5><strong>Mercato RevGen <i class="fa fa-link"></i></strong></h5></a>
 	    					<div>
 									<span class="radius label">Developed</span>
 								</div>
@@ -215,6 +199,22 @@
 								</div>
 								<p>The Mercato website utilizes the latest Foundation framework, combined with Gulp as a build process. On the backend, it uses Wordpress/PHP with the Blade templating enginge powered by the Liquid Wordpress starter theme</p>
 	    				</li>
+	    				<li>
+	    					<img src="img/advancedcfo.png" alt="AdvancedCFO" class="image-lb" data-reveal-id="imageLightbox">
+								<a href="http://www.advancedcfo.com"><h5><strong>AdvancedCFO <i class="fa fa-link"></i></strong></h5></a>
+								<div>
+									<span class="radius label">Developed</span>
+								</div>
+								<p>WordPress site that was built using the Bedrock Application Framework, Foundation, Gulp & Sass</p>
+	    				</li>
+	    				<li>
+	    					<img src="img/honeyville.png" alt="Honeyville" class="image-lb" data-reveal-id="imageLightbox">
+	    					<a href="http://www.honeyville.com" target="_blank"><h5><strong>Honeyville <i class="fa fa-link"></i></strong></h5></a>
+	    					<div>
+									<span class="radius label">Developed</span>
+								</div>
+								<p>WordPress site that utilizes the Custom Post Type feature. Built with Foundation, Gulp & Sass.</p>
+							</li>
 	    			</ul>
 	    			
 	    			<div id="imageLightbox" class="reveal-modal large" data-reveal>
