--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			        </div> 
 				    </div>
 						
-	    			<h4>My name is <strong>Zack Warren</strong>. I'm a <strong>web application developer</strong> from Layton, Ut</h4>
+	    			<h4>My name is <strong>Zack Warren</strong>. I'm a <strong>web application developer</strong> from Syracuse, Ut</h4>
 	    		</div>
 	    	</div>
 	    	
@@ -260,7 +260,7 @@
 	    				<div class="medium-4 small-12 columns">
 	    					<ul class="no-bullet my-contact-info">
 		    					<li class="address">
-		    						<p>Layton, UT</p>
+		    						<p>Syracuse, UT</p>
 		    					</li>
 		    					<li class="phone"><p>(801) 822-9306</p></li>
 		    					<li class="email"><p>zachary.warren@me.com</p></li>
