--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	    		<div class="small-12 columns">
 	    			<h1>I build web stuff!</h1>
 	    			<h3>Specifically, websites and data driven web applications.</h3>
-	    			<p>I've been developing sites and apps for <strong>over 5 years</strong>. I'm a <strong>full stack</strong> kinda guy, doing everything from <strong>front-end styling</strong> and javascript to back-end <strong>logic and integration</strong>. I'm <strong>incredibly passionate</strong> about all things 'web development'! Keep on reading to see more about <strong>my skills</strong> and latest projects!</p>
+	    			<p>I've been developing sites and apps for <strong>over 5 years</strong>. I'm a <strong>full stack</strong> kinda guy, doing everything from <strong>front-end styling</strong> and javascript to back-end <strong>logic and integration</strong>. I'm <strong>incredibly passionate</strong> about all things 'web development'!</p>
 	    			
 	    			<a data-reveal-id="contactModal" data-reveal class="small hollow button">CONTACT ME</a>
 	    			
