--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 	    				</li>
 	    				<li>
 	    					<img src="img/insurespan.png" alt="Camp Fluid" class="image-lb" data-reveal-id="imageLightbox">
-	    					<h5><strong>InsureSpan</strong></h5>
+	    					<a href="https://zacksmash.github.io/app" target="_blank"><h5><strong>InsureSpan</strong></h5></a>
 								<div>
 									<span class="radius label">Developed</span>
 									<span class="radius label">Designed</span>
@@ -191,14 +191,14 @@
 	    				</li>
 	    				<li>
 	    					<img src="img/slice.png" alt="SLICE" class="image-lb" data-reveal-id="imageLightbox">
-								<h5><strong>Salt Lake Institute of Culinary Education</strong></h5>
+								<a href="https://saltlakeculinarycenter.com" target="_blank"><h5><strong>Salt Lake Institute of Culinary Education</strong></h5></a>
 								<div>
 									<span class="radius label">Developed</span>
 								</div>
 	    				</li>
 	    				<li>
 	    					<img src="img/udoh.png" alt="Utah Department of Health" class="image-lb" data-reveal-id="imageLightbox">
-	    					<h5><strong>Utah Department of Health </h5>
+	    					<a href="https://newbornscreening.health.utah.gov" target="_blank"><h5><strong>Utah Department of Health </h5></a>
 	    					<div>
 									<span class="radius label">Developed</span>
 								</div>
